--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.10",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -46,6 +47,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "eslint": "9.29.0",
+    "eslint-config-next": "15.3.4",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
